third semester(fall 2023)/OOP 244/Project/ms4/milestone 4/errors.txt
Date.cpp: In constructor ‘sdds::Date::Date(int, int, int)’:
Date.cpp:69:9: error: ‘init’ was not declared in this scope
    init();
         ^
